--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,20 +13,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.4",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.9.0",
-    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
-    "styled-components": "^6.1.13",
-    "uuid": "^10.0.0"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
