--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13"
